--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -1,9 +1,30 @@
+<!doctype html>
 <html>
     <head>
         <title>App</title>
     </head>
     <body>
+        <script type="text/x-handlebars" data-template-name="foodDays">
+
+            <section id="foodManagerapp">
+                <ul id="fooodday-list">
+                    {{#each}}
+                        <li>
+                            <label>{{localDate}}</label>
+                            <label>{{calories}}</label>
+                        </li>
+                    {{/each}}
+                </ul>
+            </section>
+
+        </script>
+
+        <script src="js/libs/jquery-1.10.2.min.js"></script>
+        <script src="js/libs/handlebars-v1.3.0.js"></script>
+        <script src="js/libs/ember-1.3.js"></script>
+        <script src="js/libs/ember-data.js"></script>
         <script src="js/application.js"></script>
-        <h1>Hello World!</h1>
+        <script src="js/router.js"></script>
+        <script src="js/models/foodday.js"></script>
     </body>
 </html>
