--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -5,18 +5,22 @@
     </head>
     <body>
         <script type="text/x-handlebars" data-template-name="foodDays">
-
             <section id="foodManagerapp">
                 <ul id="fooodday-list">
                     {{#each}}
                         <li>
-                            <label>{{localDate}}</label>
+                            {{#link-to 'foodDay' localDate}}{{localDate}}{{/link-to}}<br/>
+                            <label>{{localDate}}</label><br/>
                             <label>{{calories}}</label>
                         </li>
                     {{/each}}
                 </ul>
             </section>
+        </script>
 
+        <script type="text/x-handlebars" data-template-name="foodDay">
+            <label>{{localDate}}</label><br/>
+            <label>{{calories}}</label>
         </script>
 
         <script src="js/libs/jquery-1.10.2.min.js"></script>
