--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <script type="text/x-handlebars" data-template-name="foodDays">
-            <section id="foodManagerapp">
+            <section id="foodDaysSection">
                 <ul id="fooodday-list">
                     {{#each}}
                         <li>
@@ -19,8 +19,10 @@
         </script>
 
         <script type="text/x-handlebars" data-template-name="foodDay">
-            <label>{{localDate}}</label><br/>
-            <label>{{calories}}</label>
+            <section id="foodDaySection">
+                <label>{{localDate}}</label><br/>
+                <label>{{calories}}</label>
+            </section>
         </script>
 
         <script src="js/libs/jquery-1.10.2.min.js"></script>
