--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>App</title>
+        <link href="css/styles.css" rel="stylesheet" type="text/css" media="all"/>
     </head>
     <body>
         <script type="text/x-handlebars" data-template-name="foodDays">
