--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -28,7 +28,7 @@
 
         <script type="text/x-handlebars" data-template-name="foodDays/new">
             <header>
-                {{#link-to 'foodDays'}}Back{{/link-to}}
+                {{#link-to 'foodDays'}}Cancel{{/link-to}}
             </header>
             <section id="foodDaysNewSection">
                 {{input type="text" id="new-foodday" placeholder="What day? (e.g. 2014-10-10)" value=newLocalDate}}
@@ -61,8 +61,6 @@
                         <li>
                             <h2>Details</h2>
                             <dl>
-                                <dt>Id</dt>
-                                <dd>{{id}}</dd>
                                 <dt>Description</dt>
                                 <dd>{{foodDescription}}</dd>
                                 <dt>Meal</dt>
@@ -78,13 +76,24 @@
 
         <script type="text/x-handlebars" data-template-name="foodDayItem/new">
             <header>
-                {{#link-to 'foodDayItems'}}Back{{/link-to}}
+                {{#link-to 'foodDayItems' controller.localDate}}Cancel{{/link-to}}
             </header>
             <section id="foodDayItemNewSection">
                 {{input type="text" id="new-desc" placeholder="Description?" value=newDescription}}
                 {{input type="text" id="new-meal" placeholder="Meal?" value=newMeal}}
                 {{input type="text" id="new-cals" placeholder="Calories?" value=newCalories}}
                 <button {{action 'createFoodDayItem' target='controller'}}>Submit</button>
+                <hr>
+                <dl>
+                    <dt>Calorie Calculation Helper</dt>
+                    <dd></dd>
+                    <dt>Cals Per Serving:</dt>
+                    <dd>{{input type="text" id="calsPerServing" placeholder="(e.g.) 100" value=calsPerServingVal}}</dd>
+                    <dt>Servings:</dt>
+                    <dd>{{input type="text" id="servings" placeholder="Default: 1.0" value=servingsVal}}</dd>
+                    <dt></dt>
+                    <dd><button id="calsHelper" {{action 'calsHelper' target='controller'}}>Add To Calories</button></dd>
+                </dl>
             </section>
         </script>
 
