--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -107,6 +107,7 @@
         <script src="js/libs/ember-1.3.js"></script>
         <script src="js/libs/ember-data.js"></script>
         <script src="js/application.js"></script>
+        <script src="js/utils.js"></script>
         <script src="js/router.js"></script>
         <script src="js/controllers/controller.js"></script>
         <script src="js/models/foodday.js"></script>
