--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -121,7 +121,7 @@
         <script src="js/application.js"></script>
         <script src="js/utils.js"></script>
         <script src="js/router.js"></script>
-        <script src="js/controllers/controller.js"></script>
+        <script src="js/controller.js"></script>
         <script src="js/models/foodday.js"></script>
         <script src="js/models/fooddayitem.js"></script>
     </body>
