Replacing event hack with proper dependency injection

--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -25,6 +25,7 @@
         <script src="js/utils.js"></script>
         <script src="js/router.js"></script>
         <script src="js/controller.js"></script>
+        <script src="js/dependency.js"></script>
         <script src="js/models/foodday.js"></script>
         <script src="js/models/fooddayitem.js"></script>
     </body>
