--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>App</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="css/datepicker.css" rel="stylesheet" type="text/css" media="all"/>
     </head>
     <body>
         <script type="text/x-handlebars" data-template-name="foodDays">
