--- a/src/main/resources/WEB-INF/public/index.html
+++ b/src/main/resources/WEB-INF/public/index.html
@@ -18,8 +18,8 @@
             {{outlet}}
         </script>
 
-        <script src="js/libs/jquery-1.10.2.min.js"></script>
-        <script src="js/libs/jquery-ui-1.10.2.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
         <script src="js/libs/handlebars-v1.3.0.js"></script>
         <script src="js/libs/ember-1.3.js"></script>
         <script src="js/libs/ember-data.js"></script>
